--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.13.0",
     "@tremor/react": "^2.8.2",
     "@types/node": "^18.16.0",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.3.1",
+    "framer-motion": "^10.12.16",
     "next": "^13.3.1",
     "next-auth": "0.0.0-pr.6777.c5550344",
     "postcss": "^8.4.23",
