--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.13.0",
@@ -25,13 +26,17 @@
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.3.1",
     "framer-motion": "^10.12.16",
+    "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
     "next": "^13.3.1",
     "next-auth": "0.0.0-pr.6777.c5550344",
+    "nookies": "^2.5.2",
     "postcss": "^8.4.23",
     "random-gradient": "^0.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-nice-avatar": "^1.4.0",
+    "react-simply-carousel": "^9.0.1",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
@@ -39,6 +44,8 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/js-cookie": "^3.0.3",
+    "@types/random-gradient": "^0.0.0",
     "prisma": "^4.13.0",
     "ts-node": "^10.9.1"
   }
