--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "brazilian-values": "^0.12.0",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.3.1",
     "framer-motion": "^10.12.16",
