--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NEXTAUTH_SECRET="APPSDAROI"
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL="http://localhost:3000"
 
 NEXT_PUBLIC_API_URL="http://localhost:8000"
