--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.13.0",
-    "@tremor/react": "^2.8.2",
+    "@tremor/react": "^2.11.0",
     "@types/node": "^18.16.0",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
@@ -35,6 +35,7 @@
     "postcss": "^8.4.23",
     "random-gradient": "^0.0.2",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-nice-avatar": "^1.4.0",
