--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-nice-avatar": "^1.4.0",
     "react-simply-carousel": "^9.0.1",
     "react-toastify": "^9.1.3",
+    "root": "github:nextauthjs/next-auth#pull/7220",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
