--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "next": "^13.3.1",
-    "next-auth": "0.0.0-pr.6777.c5550344",
+    "next-auth": "^4.22.1",
     "nookies": "^2.5.2",
     "postcss": "^8.4.23",
     "random-gradient": "^0.0.2",
@@ -41,7 +41,6 @@
     "react-nice-avatar": "^1.4.0",
     "react-simply-carousel": "^9.0.1",
     "react-toastify": "^9.1.3",
-    "root": "github:nextauthjs/next-auth#pull/7220",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
